--- a/frontend/src/components/modal/MyModal.module.css
+++ b/frontend/src/components/modal/MyModal.module.css
@@ -15,8 +15,9 @@
 }
 
 .myModalContent {
-    padding:25px;
+    padding:25px 25px 20px 25px;
     background: white;
     border-radius: 16px;
     min-width: 250px;
+    max-width: 50vw;
 }
