--- a/frontend/src/components/modal/MyModal.module.css
+++ b/frontend/src/components/modal/MyModal.module.css
@@ -1,17 +1,27 @@
 .myModal {
+    height: 100vh;
+    width: 100vw;
     position:fixed;
     top: 0;
     left:0;
     right:0;
     bottom:0;
-    display:none;
-    background: rgba(0,0,0,0.5)
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,0.5);
+    opacity: 0;
+    transition: 0.2s;
+    pointer-events: none;
+
 }
 
 .myModal_active {
     display:flex;
     justify-content: center;
     align-items: center;
+    opacity: 1;
+    pointer-events: all;
 }
 
 .myModalContent {
