--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -4,16 +4,24 @@
     box-sizing: border-box;
 }
 
+
+
+
 #root {
     display:flex;
     justify-content: center;
+    height: 100vh;
+
 }
 
 .App {
+
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: antiquewhite;
+
 }
 
 
@@ -32,6 +40,7 @@
     display: grid;
     width: 90vw;
     height: 80vh;
+
     object-fit: contain;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(300px, 1fr)); /* 3 камеры в ряду, можно изменить на свой вкус */
@@ -41,14 +50,14 @@
 .camera-container {
     max-width: 100%;
     object-fit: contain;
-    padding-bottom: 75%; /* 4:3 соотношение сторон (или другое по вашему выбору) */
+    padding-bottom: 50%; /* 4:3 соотношение сторон (или другое по вашему выбору) */
     position: relative;
 }
 
 iframe {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+
 }
 
 .error {
