--- a/frontend/src/components/noCamera/noCamera.module.css
+++ b/frontend/src/components/noCamera/noCamera.module.css
@@ -4,11 +4,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-
+    height: 20vh;
 }
 
 
 .name {
-    font-size: 50px;
+    font-size: 10vh;
 }
