--- a/frontend/src/components/modal/MyModal.module.css
+++ b/frontend/src/components/modal/MyModal.module.css
@@ -1,6 +1,6 @@
 .myModal {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     position:fixed;
     top: 0;
     left:0;
@@ -13,7 +13,7 @@
     opacity: 0;
     transition: 0.2s;
     pointer-events: none;
-    z-index: 3;
+
 }
 
 .myModal_active {
