--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -12,7 +12,7 @@ body {
 #root {
     display:block;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
     background: antiquewhite;
 }
 
