--- a/frontend/src/components/CameraComponent/CameraComponent.module.css
+++ b/frontend/src/components/CameraComponent/CameraComponent.module.css
@@ -1,14 +1,15 @@
 
 
 
-.videoDetect-camera {
+.videoDetectCamera {
     display: block;
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-.videoDetect-video {
+.videoDetectVideo {
     position: relative;
     height: 100%;
+    width: 100%;
 }
