--- a/frontend/src/components/UI/input/MyInput.module.css
+++ b/frontend/src/components/UI/input/MyInput.module.css
@@ -1,5 +1,6 @@
 .myInput {
-    width: auto;
+    position: relative;
+    width: 100%;
     padding: 5px 10px;
     margin: 5px 0;
     border: 1px solid teal;
