--- a/frontend/src/components/UI/navbar/Navbar.module.css
+++ b/frontend/src/components/UI/navbar/Navbar.module.css
@@ -12,7 +12,7 @@
 .navbar_left {
     display: flex;
     margin: 0;
-    font-size: 24px; /* Размер шрифта надписи */
+    font-size: 20px; /* Размер шрифта надписи */
     align-items: center;
 }
 
@@ -21,8 +21,9 @@
     display: flex;
     gap: 10px;
     width: auto; /* Ширина картинки */
-    height: auto;
+    height: 100%;
     margin-right: 10px;
+    align-items: center;
 }
 
 
@@ -30,7 +31,4 @@ img {
     margin-right: 10px;
 }
 
-h1{
-    font-size: 20px;
-    margin: 0;
-}
+
