--- a/frontend/src/components/modal/MyModal.module.css
+++ b/frontend/src/components/modal/MyModal.module.css
@@ -25,9 +25,9 @@
 }
 
 .myModalContent {
-    padding:25px 25px 20px 25px;
+    padding:15px 15px 15px 15px;
     background: white;
     border-radius: 16px;
-    min-width: 250px;
-    max-width: 50vw;
+
+    width: 50vw;
 }
