--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -12,12 +12,13 @@ body {
 #root {
     display:block;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     background: antiquewhite;
 }
 
 .App {
-    width: 100%;
+    width: 100vw;
+
     align-items: center;
     font-family: sans-serif;
     text-align: center;
@@ -31,7 +32,7 @@ body {
     position: relative;
     flex-direction: column;
     align-items: center;
-    height: 30%;
+    height: 50%;
 }
 
 .camera-list-name {
