--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -13,13 +13,15 @@ body {
     display:block;
     justify-content: center;
     height: 100%;
-    background: antiquewhite;
+    background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
 }
 
 .App {
     width: 100vw;
-
+    display: flex;
+    flex-direction: column;
     align-items: center;
+
     font-family: sans-serif;
     text-align: center;
     margin: 0 auto;
