верстка и Ñ, переубрал модальное окно для виеÐдео и забабахал смену темы

--- a/frontend/src/components/cameraAddForm/addForm.module.css
+++ b/frontend/src/components/cameraAddForm/addForm.module.css
@@ -4,6 +4,8 @@
     gap: 5px;
     align-items: center;
     margin-top: 5px;
+    background-color: var(--background-app-color);
+    transition: background-color 200ms linear;
 }
 
 
