--- a/frontend/src/components/UI/navbar/Navbar.module.css
+++ b/frontend/src/components/UI/navbar/Navbar.module.css
@@ -1,18 +1,26 @@
+
+
+
 .navbar {
     width: 100%;
     display: flex;
+    height: 100px;
     justify-content: space-between;
     align-items: center;
-    background-color: #333; /* Цвет фона навигационной панели */
+    background-color: var(--background-app-color); /* Цвет фона навигационной панели */
+    transition: background-color 200ms linear,
+                border-bottom 200ms linear;
     padding: 5px;
-    color: white; /* Цвет текста */
+    border-bottom: 1px solid var(--border-color);
 }
 
 /* Стили для левой части навигационной панели (надпись) */
 .navbar_left {
+    margin-left: 1%;
     display: flex;
-    margin: 0;
-    font-size: 20px; /* Размер шрифта надписи */
+    justify-content: space-evenly;
+    gap: 3em;
+    font-size: 15px; /* Размер шрифта надписи */
     align-items: center;
 }
 
@@ -20,6 +28,7 @@
 .navbar_right {
     display: flex;
     gap: 10px;
+    justify-content: space-evenly;
     width: auto; /* Ширина картинки */
     height: 100%;
     margin-right: 10px;
@@ -32,6 +41,19 @@ img {
 }
 
 h1 {
-    font-size: 20px;
+    font-size: 55px;
+    font-family: "Montserrat Alternates", serif;
 }
 
+
+.links {
+    font-size: 30px;
+    font-family: "Montserrat Alternates";
+
+
+}
+
+.links:hover {
+    color: var(--links-hover);
+    transition: color 200ms linear;
+}
