--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: var(--text-color);
+    transition: color 200ms linear;
+
 }
 
 html,
@@ -13,7 +16,26 @@ body {
     display:block;
     justify-content: center;
     height: 100%;
-    background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
+    background-color: var(--background-app-color);
+    transition: background-color 200ms linear;
+}
+
+html[data-theme='dark'] {
+    --background-app-color: rgba(33, 30, 66, 1);
+    --button-background-color: rgba(199, 12, 85, 0.8);
+    --text-color: rgba(255, 255, 255, 1);
+    --links-hover: rgba(255, 255,255,0.7);
+    --border-color: rgba(255, 255, 255, 1);
+    --button-background-color-hover: rgba(235, 32, 203, 0.9);
+}
+
+html[data-theme='light'] {
+    --background-app-color: #FFFBF5;
+    --button-background-color: #D2E0FB;
+    --text-color: #111111;
+    --links-hover: rgba(1,1,1,0.8);
+    --button-background-color-hover: #8EACCD;
+    --border-color: rgba(1, 1, 1, 1);
 }
 
 .App {
@@ -29,45 +51,41 @@ body {
 }
 
 
-.video__wrapper {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    height: 50%;
-}
+/*video__wrapper {*/
+/*    display: flex;*/
+/*    position: relative;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    height: 50%;*/
+/*}*/
 
-.camera-list-name {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
+/*.camera-list-name {*/
+/*    font-size: 24px;*/
+/*    margin-bottom: 20px;*/
+/*}*/
 
-.camera-grid {
-    display: grid;
-    position: relative;
-    width: 100%;
-    height: 100%;
+/*.camera-grid {*/
+/*    display: grid;*/
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
 
-    /* object-fit: contain; */
-    justify-content: center;
-    grid-template-columns: repeat(auto-fit, 33%);
-    grid-template-rows: repeat(auto-fill, 1fr);
-    gap: 5px;
-}
+/*    !* object-fit: contain; *!*/
+/*    justify-content: center;*/
+/*    grid-template-columns: repeat(auto-fit, 33%);*/
+/*    grid-template-rows: repeat(auto-fill, 1fr);*/
+/*    gap: 5px;*/
+/*!*}*!*/
 
-.camera-container {
-    /* width: 100%; */
-    /* height: 100%; */
-    position: relative;
-    /* object-fit: contain; */
-    /* padding-bottom: 50%; */
-}
+/*.camera-container {*/
+/*    !* width: 100%; *!*/
+/*    !* height: 100%; *!*/
+/*    position: relative;*/
+/*!*    !* object-fit: contain; *!*!*/
+/*!*    !* padding-bottom: 50%; *!*!*/
+/*!*}*!*/
 
-iframe {
-    position: relative;
-    /* max-width: 100%; */
-    /* height: fit-content; */
-}
+
 
 .error {
     border: 1px solid red;
