--- a/frontend/src/components/UI/button/MyButton.module.css
+++ b/frontend/src/components/UI/button/MyButton.module.css
@@ -1,8 +1,9 @@
 .MyBtn {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     gap: 5px;
-    width: 18rem;
+    width: 11vw;
     height: 60px;
     padding: 15px 10px;
     color: var(--text-color);
@@ -16,6 +17,13 @@
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+}
+
+@media screen and (max-width: 1520px) {
+    .MyBtn {
+        font-size: 10px;
+        font-family: "Montserrat Alternates", serif;
+    }
 }
 
 .MyBtn:hover {
