--- a/frontend/src/components/UI/input/MyInput.module.css
+++ b/frontend/src/components/UI/input/MyInput.module.css
@@ -1,6 +1,7 @@
 .myInput {
     position: relative;
     width: 100%;
+    color: rgba(1,1,1,1);
     padding: 5px 10px;
     margin: 5px 0;
     border: 1px solid teal;
