--- a/frontend/src/components/UI/navbar/Navbar.module.css
+++ b/frontend/src/components/UI/navbar/Navbar.module.css
@@ -27,6 +27,7 @@
 /* Стили для правой части навигационной панели (картинка и кнопка) */
 .navbar_right {
     display: flex;
+    margin-left: 10px;
     gap: 10px;
     justify-content: space-evenly;
     width: auto; /* Ширина картинки */
@@ -40,10 +41,21 @@ img {
     margin-right: 10px;
 }
 
+
+
+
 h1 {
     font-size: 55px;
     font-family: "Montserrat Alternates", serif;
 }
+
+@media screen and (max-width: 1520px) {
+    h1 {
+        font-size: 30px;
+        font-family: "Montserrat Alternates", serif;
+    }
+}
+
 
 
 .links {
@@ -51,6 +63,13 @@ h1 {
     font-family: "Montserrat Alternates";
 
 
+}
+
+@media screen and (max-width: 1520px) {
+    .links {
+        font-size: 20px;
+        font-family: "Montserrat Alternates", serif;
+    }
 }
 
 .links:hover {
