--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -39,7 +39,7 @@ html[data-theme='light'] {
 }
 
 .App {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
