--- a/frontend/src/components/CameraDetect/CameraDetect.module.css
+++ b/frontend/src/components/CameraDetect/CameraDetect.module.css
@@ -1,4 +1,4 @@
-.videoDetect {
+.cameraDetect {
     display: block;
     position: relative;
     margin: 0 auto;
@@ -8,26 +8,26 @@
     justify-content: center;
 }
 
-.videoDetect-inputUrl {
+.cameraDetect-inputUrl {
     width: 80%;
     height: 3vh;
     font-size: large;
 }
 
-.videoDetect-Button {
+.cameraDetect-Button {
     margin-left: 3vh;
     height: 3vh;
     width: 5vh;
 }
 
-.videoDetect-cameraDiv {
+.cameraDetect-cameraDiv {
     display: block;
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-.videoDetect-video {
+.cameraDetect-video {
     position: relative;
     height: 100%;
     width: fit-content;
