--- a/frontend/src/components/UI/loader/Loader.module.css
+++ b/frontend/src/components/UI/loader/Loader.module.css
@@ -1,20 +1,22 @@
 .loader {
-    width: 50px;
-    height: 50px;
-    align-items: center;
-    justify-content: center;
-    top: 40%;
+    width: 48px;
+    height: 48px;
     position: relative;
+    top:40%;
     border-radius: 50%;
-    border: 3px dashed teal;
-    animation: rotate 1s infinite linear;
+    display: inline-block;
+    border-top: 3px solid var(--border-color);
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
 }
 
-@keyframes rotate {
-    from {
-        transform: rotate(0deg) scale(1);
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
     }
-    to {
-        transform: rotate(360deg) scale(1.4);
+    100% {
+        transform: rotate(360deg);
     }
 }
+
