--- a/frontend/src/components/modal/MyModal.module.css
+++ b/frontend/src/components/modal/MyModal.module.css
@@ -1,5 +1,6 @@
 .myModal {
-    height: 100vh;
+
+    height: 100%;
     width: 100vw;
     position:fixed;
     top: 0;
@@ -30,7 +31,7 @@
 .myModalContent {
     padding:15px 15px 15px 15px;
     border-radius: 16px;
-
+    height: auto;
     width: 40vw;
     background-color: var(--background-app-color);
     transition: background-color 200ms linear;
