--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -10,14 +10,15 @@
 html,
 body {
     height: 100%;
+    background-color: var(--background-app-color);
+    transition: background-color 200ms linear;
 }
 
 #root {
     display:block;
     justify-content: center;
     height: 100%;
-    background-color: var(--background-app-color);
-    transition: background-color 200ms linear;
+
 }
 
 html[data-theme='dark'] {
@@ -40,6 +41,7 @@ html[data-theme='light'] {
 
 .App {
     width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,7 +49,7 @@ html[data-theme='light'] {
     font-family: sans-serif;
     text-align: center;
     margin: 0 auto;
-    height: 100%;
+    height: auto;
 }
 
 
